# dsf-core

./: Cargo.toml  README.md
.github/workflows/: rust.yml
base/: Cargo.toml
base/src/: error.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
protocol/: 00-overview.md  01-operation.md  02-base.md  04-pages.md  05-messages.md  05-pages.md
src/: error.rs  keys.rs  lib.rs  manager.rs  prelude.rs
src/api/: mod.rs
src/base/: base.rs  body.rs  header.rs  mod.rs
src/crypto/: dalek.rs  mod.rs  native.rs  sodium.rs
src/net/: mod.rs  request.rs  response.rs
src/options/: helpers.rs  mod.rs
src/page/: info.rs  mod.rs
src/protocol/: base.rs  container.rs  header.rs  helpers.rs  messages.rs  mod.rs  net.rs  options.rs  page.rs
src/service/: builder.rs  kinds.rs  mod.rs  net.rs  publisher.rs  registry.rs  subscriber.rs
src/types/: address.rs  array.rs  datetime.rs  errors.rs  flags.rs  kinds.rs  markers.rs  mod.rs
src/wire/: builder.rs  container.rs  header.rs  mod.rs
