[package]
name = "dsf-core"
version = "0.2.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "DSF core object definitions"
repository = "https://github.com/dist-svc/dsf-core"
homepage = "https://github.com/dist-svc"
keywords = ["DSF", "distributed"]
license = "MPL-2.0"
edition = "2018"

[features]
std = [ "managed/std", "bytes/std", "base64/std", "byteorder/std", "sha2/std", "chrono/std", "strum", "strum_macros", "thiserror", "rand_core/std" ]
alloc = [ "base64/alloc", "chrono/alloc", "pretty-hex/alloc" ]
crypto-dalek = [ "ed25519-dalek" ]
default = [ "std", "serde" ]


[dependencies]
bitflags = "1.2.1"
#derive_builder = "0.7.0"
log = { version = "0.4.11", features = [ "release_max_level_debug" ] }
#ls = "0.0.0"
#newtype_array = "0.1.6"
slice-ext = "0.1.0"
async-trait = "0.1.19"
derivative = "2.2.0"

bytes = { version = "1.0.1", default_features = false }
base64 = { version = "0.12.1", default_features = false }
byteorder = { version = "1.3.2", default_features = false }
managed = { version = "0.7.1", default_features = false }
sha2 = { version = "0.8.1", default_features = false }
chrono = { version = "0.4.11", default_features = false }
rand_core = { version = "0.6.3", default_features = false }

pretty-hex = { version = "0.2.1", default_features = false }
num_enum = { version = "0.5.4", default-features = false }

structopt = { version = "0.3.8", optional = true }
thiserror = { version = "1.0.11", default_features = false, optional = true }
defmt = { version = "0.2.1", optional = true }
strum_macros = { version = "0.20.1", optional = true }

no-std-net = { version = "0.3.0", optional = true }
strum = { version = "0.23.0", optional = true }
diesel = { version = "1.4.3", optional = true }
modular-bitfield = "0.11.2"

ed25519-dalek = { version = "1.0.0", optional = true }

[dependencies.sodiumoxide]
version = "0.2.5"
default_features = false


[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[patch.crates-io]
sodiumoxide = { git = "https://github.com/sodiumoxide/sodiumoxide.git" }

[dev-dependencies]
pretty_assertions = "1.0.0"
simplelog = "0.10.2"
