[package]
name = "dsf-core"
version = "0.2.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "DSF core object definitions"
repository = "https://github.com/dist-svc/dsf-core"
homepage = "https://github.com/dist-svc"
keywords = ["DSF", "distributed"]
license = "MPL-2.0"
edition = "2018"

[features]
defmt-default = [ "defmt", "heapless/defmt-impl" ]

std = [ "alloc", "managed/std", "bytes/std", "base64/std", "byteorder/std", "sha2/std", "chrono/std", "thiserror", "rand_core_0_5/std", "log/std", "simplelog", "getrandom/std" ]
alloc = [ "base64/alloc", "chrono/alloc", "pretty-hex/alloc", "defmt/alloc" ]

crypto_rust = ["ed25519", "x25519-dalek", "ed25519-dalek", "curve25519-dalek", "xsalsa20poly1305", "chacha20poly1305", "crypto_kx", "aead", "blake2", "digest" ]
crypto_sodium = [ "sodiumoxide" ]

default = [ "std", "serde", "heapless/serde", "crypto_rust", "defmt-default" ]


[dependencies]
bitflags = "1.2.1"
#derive_builder = "0.7.0"
log = { version = "0.4.11", default_features = false, features = [ "release_max_level_debug" ] }
#ls = "0.0.0"
#newtype_array = "0.1.6"
slice-ext = "0.1.0"
async-trait = "0.1.19"
derivative = "2.2.0"

bytes = { version = "1.0.1", default_features = false }
base64 = { version = "0.12.1", default_features = false }
byteorder = { version = "1.3.2", default_features = false }
managed = { version = "0.7.1", default_features = false }
sha2 = { version = "0.8.1", default_features = false }
chrono = { version = "0.4.11", default_features = false }

pretty-hex = { version = "0.2.1", default_features = false }
num_enum = { version = "0.5.4", default-features = false }
defmt = { version = "0.3.0", optional = true }

structopt = { version = "0.3.8", optional = true }
thiserror = { version = "1.0.11", default_features = false, optional = true }
strum = { version = "0.23.0", default_features = false, features = [ "derive" ] }
strum_macros = { version = "0.20.1", default_features = false }

no-std-net = { version = "0.3.0", optional = true }
diesel = { version = "1.4.3", optional = true }
modular-bitfield = "0.11.2"
getrandom = { version = "0.2.5", optional = true, default_features = false }


simplelog = { version = "0.10.2", optional = true }
cfg-if = "1.0.0"

# libsodium replacements...
ed25519 = { version = "1.4.0", optional=true, default_features = false}
x25519-dalek = { version = "1.2.0", optional=true, default_features = false}
ed25519-dalek = { version = "1.0.1", optional=true, default_features = false, features=[ "rand" ] }
curve25519-dalek = { version = "3.2.1", optional=true, default_features = false}
xsalsa20poly1305 = { version = "0.8.0", optional=true, default_features = false}
chacha20poly1305 = { version = "0.9.0", optional=true, default_features = false}
crypto_kx = { version = "0.0.2", optional=true, default_features = false}
aead = { version = "0.4.3", optional=true, default_features = false, features = [ "rand_core" ] }
blake2 = { version = "0.10.4", default_features = false, optional = true }
digest = { version = "0.10.3", default_features = false, optional = true, features = [ "core-api", "rand_core" ] }
heapless = { version = "0.7.10" }


[dependencies.rand_core_0_5]
package = "rand_core"
version = "0.5.1"
default_features = false

[dependencies.rand_core_0_6]
package = "rand_core"
version = "0.6.3"
default_features = false
features = [ "getrandom" ]

[dependencies.sodiumoxide]
version = "0.2.5"
default_features = false
optional = true


[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[patch.crates-io]
sodiumoxide = { git = "https://github.com/sodiumoxide/sodiumoxide.git" }

[dev-dependencies]
pretty_assertions = "1.0.0"
