[package]
name = "dsf-core"
version = "0.2.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "DSF core object definitions"
repository = "https://github.com/dist-svc/dsf-core"
homepage = "https://github.com/dist-svc"
keywords = ["DSF", "distributed"]
license = "MPL-2.0"
edition = "2018"

[features]
defmt-default = ["defmt", "heapless/defmt-impl"]

std = ["alloc", "managed/std", "bytes/std", "base64/std", "byteorder/std", "sha2/std", "chrono/std", "thiserror", "rand_core_0_5/std", "log/std", "simplelog", "getrandom/std"]
alloc = ["base64/alloc", "chrono/alloc", "pretty-hex/alloc", "encdec/alloc", "defmt/alloc"]
serde = ["dep:serde", "heapless/serde"]

default = ["std", "alloc", "serde"]

[dependencies]
aead = { version = "0.4.3", default_features = false, features = [ "rand_core" ] }
async-trait = "0.1.19"
base64 = { version = "0.12.1", default_features = false }
bitflags = "1.2.1"
blake2 = { version = "0.10.4", default_features = false }
byteorder = { version = "1.3.2", default_features = false }

bytes = { version = "1.0.1", default_features = false }
cfg-if = "1.0.0"
chacha20poly1305 = { version = "0.9.0", default_features = false }
chrono = { version = "0.4.11", default_features = false }
crypto_kx = { version = "0.0.2", default_features = false }
curve25519-dalek = { version = "3.2.1", default_features = false }
defmt = { version = "0.3.0", optional = true }
derivative = "2.2.0"
diesel = { version = "1.4.3", optional = true }
digest = { version = "0.10.3", default_features = false, features = [ "core-api", "rand_core" ] }

# libsodium replacements...
ed25519 = { version = "1.4.0", default_features = false }
ed25519-dalek = { version = "1.0.1", default_features = false, features = [ "rand" ] }
encdec = "0.8.0"
getrandom = { version = "0.2.5", optional = true, default_features = false }
heapless = { version = "0.7.10" }
#derive_builder = "0.7.0"
log = { version = "0.4.11", default_features = false, features = [ "release_max_level_debug" ] }
managed = { version = "0.7.1", default_features = false }
modular-bitfield = "0.11.2"

no-std-net = { version = "0.3.0", optional = true }
num_enum = { version = "0.5.4", default-features = false }

pretty-hex = { version = "0.2.1", default_features = false }
sha2 = { version = "0.8.1", default_features = false }

simplelog = { version = "0.10.2", optional = true }
#ls = "0.0.0"
#newtype_array = "0.1.6"
slice-ext = "0.1.0"

structopt = { version = "0.3.8", optional = true }
strum = { version = "0.23.0", default_features = false, features = [ "derive" ] }
strum_macros = { version = "0.20.1", default_features = false }
thiserror = { version = "1.0.11", default_features = false, optional = true }
x25519-dalek = { version = "1.2.0", default_features = false }
xsalsa20poly1305 = { version = "0.8.0", default_features = false }

[dependencies.rand_core_0_5]
package = "rand_core"
version = "0.5.1"
default_features = false

[dependencies.rand_core_0_6]
package = "rand_core"
version = "0.6.3"
default_features = false
features = ["getrandom"]

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[dependencies.sodiumoxide]
version = "0.2.5"
default_features = false
optional = true

[patch.crates-io]
sodiumoxide = { git = "https://github.com/sodiumoxide/sodiumoxide.git" }

[dev-dependencies]
pretty_assertions = "1.0.0"
